// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyword detection detects a single heavily weighted keyword as spam 1`] = `
{
  "action": "BAN",
  "averageSimilarity": 128,
  "comparisons": [
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "KEYWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "0bd230d06e3c4cc602021c8403180c00271a1e55a90210aac421bea8c7918e24",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "KEYWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "0bd230d06e3c4cc602021c8403180c00271a1e55a90210aac421bea8c7918e24",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 5,
        "highestRankingString": "keyword",
        "matches": [
          "keyword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
  ],
  "pointsFromAttachments": 0,
  "source": "spam",
  "totalPoints": 5,
}
`;

exports[`Keyword detection detects several lightly weighted keywords as spam 1`] = `
{
  "action": "BAN",
  "averageSimilarity": 128,
  "comparisons": [
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
    {
      "comparedContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "originalContent": {
        "attachmentCount": 0,
        "authorId": "000000000000000000000",
        "channelId": "000000000000000000000",
        "content": "LIGHTWORD content content",
        "guildId": "000000000000000000000",
        "hexHash": "8bd230d06cbf4cc712821ce40b9a0850271a0a51a10219aae429aee0c7918421",
        "messageId": "000000000000000000000",
      },
      "pointsFromMatches": {
        "highestRankingMatch": 1,
        "highestRankingString": "lightword",
        "matches": [
          "lightword",
        ],
      },
      "pointsFromSimilarity": {
        "pointsGained": 1,
        "thresholdBroken": 128,
      },
      "similarityToPostedContent": 128,
    },
  ],
  "pointsFromAttachments": 0,
  "source": "spam",
  "totalPoints": 5,
}
`;
